--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -20,7 +20,7 @@
     "@orpc/client": "^1.5.0",
     "hono": "^4.8.2",
     "@hono/node-server": "^1.14.4",
-    "drizzle-orm": "^0.44.2",
+    "drizzle-orm": "beta",
     "@neondatabase/serverless": "^1.0.1",
     "ws": "^8.18.3",
     "better-auth": "^1.3.4",
@@ -31,7 +31,7 @@
     "typescript": "^5.8.2",
     "tsx": "^4.19.2",
     "@types/node": "^22.13.11",
-    "drizzle-kit": "^0.31.2",
+    "drizzle-kit": "beta",
     "@types/ws": "^8.18.1"
   }
 }
