--- a/package.json
+++ b/package.json
@@ -20,16 +20,16 @@
   },
   "dependencies": {
     "dinero.js": "^2.0.0-alpha.14",
-    "drizzle-kit": "^1.0.0-beta.1-40d80bd",
-    "drizzle-orm": "^1.0.0-beta.1-40d80bd"
+    "drizzle-kit": "beta",
+    "drizzle-orm": "beta"
   },
   "devDependencies": {
-    "turbo": "^2.5.4",
+    "turbo": "^2.5.6",
     "@biomejs/biome": "2.1.2",
     "ultracite": "5.1.1",
     "husky": "^9.1.7",
-    "lint-staged": "^16.1.2",
-    "oxlint": "^1.8.0"
+    "lint-staged": "^16.1.5",
+    "oxlint": "^1.13.0"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,json,jsonc,css,scss,md,mdx}": [
