--- a/apps/honoken/vercel.json
+++ b/apps/honoken/vercel.json
@@ -1,10 +1,10 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
+  "regions": ["iad1"],
   "functions": {
     "api/index.ts": {
       "maxDuration": 300,
-      "runtime": "nodejs20.x",
-      "regions": ["iad1"]
+      "runtime": "nodejs22.x"
     }
   },
   "rewrites": [
