Moved the BTS default server and web to example-server and example-web. Updated package.json.

--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "dev": "turbo dev",
     "build": "turbo build",
     "check-types": "turbo check-types",
+    "dev:platform": "turbo -F platform dev",
     "dev:native": "turbo -F native dev",
-    "dev:web": "turbo -F web dev",
-    "dev:server": "turbo -F server dev",
+    "dev:example-web": "turbo -F example-web dev",
+    "dev:example-server": "turbo -F example-server dev",
     "dev:honoken": "turbo -F honoken dev",
     "db:push": "turbo -F server db:push",
     "db:studio": "turbo -F server db:studio",
