Started structuring repo. Created apps for platform, frontrow (attendee facing, store, event pages, checkout), crew (RN app), and handbook (dev only, unused for now).

--- a/apps/crew/app.json
+++ b/apps/crew/app.json
@@ -1,9 +1,9 @@
 {
   "expo": {
-    "name": "my-better-t-app",
-    "slug": "my-better-t-app",
+    "name": "DayOf Crew",
+    "slug": "dayof-crew",
     "version": "1.0.0",
-    "scheme": "my-better-t-app",
+    "scheme": "dayof-crew",
     "web": {
       "bundler": "metro",
       "output": "static",
