--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
   ],
   "scripts": {
     "check": "oxlint",
-    "dev": "turbo dev",
-    "build": "turbo build",
+    "dev": "turbo dev --filter=!example-web --filter=!example-server",
+    "build": "turbo build --filter=!example-web --filter=!example-server --filter=!handbook",
     "check-types": "turbo check-types",
     "dev:platform": "turbo -F platform dev",
-    "dev:native": "turbo -F native dev",
-    "dev:example-web": "turbo -F example-web dev",
-    "dev:example-server": "turbo -F example-server dev",
+    "dev:frontrow": "turbo -F frontrow dev",
+    "dev:handbook": "turbo -F handbook dev",
+    "dev:crew": "turbo -F crew dev",
     "dev:honoken": "turbo -F honoken dev",
     "db:push": "turbo -F server db:push",
     "db:studio": "turbo -F server db:studio",
