--- a/apps/honoken/vercel.json
+++ b/apps/honoken/vercel.json
@@ -19,5 +19,6 @@
       "destination": "/api", 
       "permanent": false 
     }
-  ]
+  ],
+  "ignoreCommand": "if [ -z \"$VERCEL_GIT_PREVIOUS_SHA\" ]; then exit 1; fi; git diff --quiet \"$VERCEL_GIT_PREVIOUS_SHA\" \"$VERCEL_GIT_COMMIT_SHA\" -- apps/honoken || exit 1"
 }
