Update package.json files across multiple apps to include new 'database' dependency and '@neondatabase/serverless' in the main package. Removed draft rules schema from the database package.

--- a/apps/honoken/package.json
+++ b/apps/honoken/package.json
@@ -19,6 +19,7 @@
     "deploy:prod": "vercel --prod"
   },
   "dependencies": {
+    "database": "workspace:*",
     "@hono/zod-validator": "^0.7.0",
     "@neondatabase/serverless": "^1.0.1",
     "@upstash/redis": "^1.35.0",
