--- a/apps/platform/package.json
+++ b/apps/platform/package.json
@@ -8,6 +8,7 @@
     "dev": "vite dev --port=3001"
   },
   "dependencies": {
+    "database": "workspace:*",
     "radix-ui": "^1.4.2",
     "@tanstack/react-form": "^1.0.5",
     "@tailwindcss/vite": "^4.1.8",
