--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "dependencies": {
     "dinero.js": "^2.0.0-alpha.14",
     "drizzle-kit": "beta",
-    "drizzle-orm": "beta"
+    "drizzle-orm": "beta",
+    "@neondatabase/serverless": "^1.0.1"
   },
   "devDependencies": {
     "turbo": "^2.5.6",
