Update biome.json to include overrides for linter rules, add new dependencies in bun.lock and package.json, and enhance database package exports. Refactor schema exports to work for Effect.

--- a/biome.json
+++ b/biome.json
@@ -19,7 +19,22 @@
       "!**/.source"
     ]
   },
-  "extends": [
-    "ultracite"
+  "extends": ["ultracite"],
+  "overrides": [
+    {
+      "includes": [
+        "packages/**/runtime/**/*.{ts,tsx}",
+        "packages/**/inngest/**/*.ts",
+        "packages/facts/**/*.ts",
+        "packages/rules/**/*.ts"
+      ],
+      "linter": {
+        "rules": {
+          "performance": {
+            "noNamespaceImport": "off"
+          }
+        }
+      }
+    }
   ]
 }
