--- a/package.json
+++ b/package.json
@@ -23,10 +23,15 @@
     "dev:inngest:events": "inngest-cli dev -u http://localhost:3001/api/inngest"
   },
   "dependencies": {
+    "@effect/schema": "^0.75.5",
+    "@handfish/drizzle-effect": "^0.0.17",
+    "@neondatabase/serverless": "^1.0.1",
     "dinero.js": "^2.0.0-alpha.14",
     "drizzle-kit": "beta",
     "drizzle-orm": "beta",
-    "@neondatabase/serverless": "^1.0.1"
+    "drizzle-zod": "^0.8.3",
+    "effect": "^3.17.9",
+    "zod": "^4.1.5"
   },
   "devDependencies": {
     "turbo": "^2.5.6",
