--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -7,8 +7,8 @@
   "exports": {
     ".": "./index.ts",
     "./schema": "./schema/index.ts",
-    "./db": "./db/index.ts"
+    "./db": "./db/index.ts",
+    "./zod": "./runtime/zod.ts",
+    "./effect": "./runtime/effect.ts"
   }
 }
-
-
