--- a/apps/honoken/package.json
+++ b/apps/honoken/package.json
@@ -19,10 +19,10 @@
     "deploy:prod": "vercel --prod"
   },
   "dependencies": {
-    "database": "workspace:*",
     "@hono/zod-validator": "^0.7.0",
     "@neondatabase/serverless": "^1.0.1",
     "@upstash/redis": "^1.35.0",
+    "database": "workspace:*",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.44.2",
     "hono": "^4.7.11",
@@ -32,7 +32,7 @@
     "passkit-generator": "^3.4.0",
     "posthog-node": "^5.1.0",
     "undici": "^7.10.0",
-    "zod": "3.25.32"
+    "zod": "^4.0.0"
   },
   "devDependencies": {
     "@iarna/toml": "^2.2.5",
@@ -50,8 +50,7 @@
     "fs-extra": "^11.3.0",
     "typescript": "^5.8.3",
     "vitest": "^3.2.3"
-  }
-  ,
+  },
   "engines": {
     "node": "22.x"
   }
