Enhance authentication client configuration across multiple apps by updating base URLs and ensuring explicit type definitions. Add linter rules to biome.json for performance improvements. Expand documentation on authentication conventions, including proxy paths and environment variable requirements.

--- a/biome.json
+++ b/biome.json
@@ -20,6 +20,13 @@
     ]
   },
   "extends": ["ultracite"],
+  "linter": {
+    "rules": {
+      "performance": {
+        "noNamespaceImport": "off"
+      }
+    }
+  },
   "overrides": [
     {
       "includes": [
