--- a/apps/honoken/vercel.json
+++ b/apps/honoken/vercel.json
@@ -10,14 +10,14 @@
   "rewrites": [
     {
       "source": "/api/(.*)",
-      "destination": "/api"
+      "destination": "/api/$1"
     }
   ],
   "redirects": [
-    { 
-      "source": "/", 
-      "destination": "/api", 
-      "permanent": false 
+    {
+      "source": "/",
+      "destination": "/api",
+      "permanent": false
     }
   ],
   "ignoreCommand": "if [ -z \"$VERCEL_GIT_PREVIOUS_SHA\" ]; then exit 1; fi; git diff --quiet \"$VERCEL_GIT_PREVIOUS_SHA\" \"$VERCEL_GIT_COMMIT_SHA\" -- apps/honoken || exit 1"
