--- a/apps/honoken/package.json
+++ b/apps/honoken/package.json
@@ -19,18 +19,19 @@
     "deploy:prod": "vercel --prod"
   },
   "dependencies": {
+    "@vercel/blob": "^1.1.1",
     "@hono/zod-validator": "^0.7.2",
     "@neondatabase/serverless": "^1.0.1",
     "@upstash/redis": "^1.35.0",
     "database": "workspace:*",
-    "dotenv": "^16.5.0",
+    "dotenv": "^17.2.2",
     "drizzle-orm": "^0.44.2",
-    "hono": "^4.7.11",
+    "hono": "^4.9.6",
     "jose": "^6.0.11",
     "json-stable-stringify": "^1.3.0",
-    "p-retry": "^6.2.1",
+    "p-retry": "^7.0.0",
     "passkit-generator": "^3.4.0",
-    "posthog-node": "^5.1.0",
+    "posthog-node": "^5.8.2",
     "undici": "^7.10.0",
     "zod": "^4.0.0"
   },
@@ -40,9 +41,9 @@
     "@inquirer/input": "^4.1.12",
     "@inquirer/prompts": "^7.5.3",
     "@inquirer/select": "^4.2.3",
-    "@types/node": "^22.15.31",
+    "@types/node": "^22.18.1",
     "@types/supertest": "^6.0.3",
-    "@types/web": "^0.0.241",
+    "@types/web": "^0.0.265",
     "archiver": "^7.0.1",
     "chalk": "^5.4.1",
     "drizzle-kit": "^0.31.1",
