--- a/biome.json
+++ b/biome.json
@@ -42,6 +42,12 @@
           }
         }
       }
+    },
+    {
+      "includes": ["apps/honoken/src/**/*.ts"],
+      "linter": {
+        "rules": {}
+      }
     }
   ]
 }
