--- a/apps/honoken/vercel.json
+++ b/apps/honoken/vercel.json
@@ -4,15 +4,11 @@
   "outputDirectory": ".",
   "functions": {
     "api/index.ts": {
-      "maxDuration": 300
+      "maxDuration": 300,
+      "runtime": "nodejs22.x"
     }
   },
-  "rewrites": [
-    {
-      "source": "/api/(.*)",
-      "destination": "/api/$1"
-    }
-  ],
+  "rewrites": [],
   "redirects": [
     {
       "source": "/",
