--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,15 @@
 {
   "compilerOptions": {
-    "strictNullChecks": true
+    "strictNullChecks": true,
+    "baseUrl": ".",
+    "paths": {
+      "@honoken/*": ["apps/honoken/src/*"],
+      "@backstage/*": ["apps/backstage/src/*"],
+      "@frontrow/*": ["apps/frontrow/src/*"],
+      "@handbook/*": ["apps/handbook/src/*"],
+      "@auth/*": ["apps/auth/src/*"],
+      "@events/*": ["apps/events/src/*"],
+      "@crew/*": ["apps/crew/*"]
+    }
   }
 }
