Refactor package.json scripts and enhance README for clarity
- Updated database-related scripts in `package.json` to include `--filter=database` for better targeting during operations.
- Enhanced the README to provide a clearer overview of the project structure, core technologies, and local development setup.
- Improved TypeScript configuration across various applications to ensure better module resolution and references.
- Added new unit tests for ETag helpers and improved error handling in routes to enhance robustness.

--- a/apps/backstage/tsconfig.json
+++ b/apps/backstage/tsconfig.json
@@ -23,5 +23,9 @@
       "@/*": ["./src/*"]
     }
   },
-  "references": []
+  "references": [
+    {
+      "path": "../packages/database"
+    }
+  ]
 }
