--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -10,5 +10,11 @@
     "./db": "./db/index.ts",
     "./zod": "./runtime/zod.ts",
     "./effect": "./runtime/effect.ts"
+  },
+  "scripts": {
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:push": "drizzle-kit push",
+    "db:studio": "drizzle-kit studio"
   }
 }
