--- a/apps/frontrow/tsconfig.json
+++ b/apps/frontrow/tsconfig.json
@@ -23,9 +23,7 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
-    }
-  },
-  "references": [{
-    "path": "../server"
-  }]
+    },
+    "composite": true
+  }
 }
