--- a/apps/honoken/tsconfig.json
+++ b/apps/honoken/tsconfig.json
@@ -6,26 +6,14 @@
     "strict": true,
     "skipLibCheck": true,
     "noEmit": true,
-    "lib": [
-      "ESNext"
-    ],
+    "lib": ["ESNext"],
     "jsx": "react-jsx",
     "jsxImportSource": "hono/jsx",
-    "types": [
-      "node",
-      "vitest/globals"
-    ],
+    "types": ["node", "vitest/globals"],
     "baseUrl": ".",
     "paths": {
-      "~/": [
-        "./src/"
-      ]
+      "@honoken/*": ["./src/*"]
     }
   },
-  "exclude": [
-    "node_modules",
-    "dist",
-    "archived",
-    "docs"
-  ]
+  "exclude": ["node_modules", "dist", "archived", "docs"]
 }
