Enhance linter configuration and update README for clarity
- Added a new linter configuration for test files, disabling the "noExplicitAny" rule for better flexibility in testing.
- Improved formatting and clarity in the README, ensuring consistent presentation of commands and instructions.
- Updated database schema export to use a barrel file for easier imports across the application.

--- a/biome.json
+++ b/biome.json
@@ -48,6 +48,21 @@
       "linter": {
         "rules": {}
       }
+    },
+    {
+      "includes": [
+        "**/*.test.ts",
+        "**/*.test.tsx",
+        "**/*.spec.ts",
+        "**/*.spec.tsx"
+      ],
+      "linter": {
+        "rules": {
+          "suspicious": {
+            "noExplicitAny": "off"
+          }
+        }
+      }
     }
   ]
 }
