Update package.json and neon-branch.ts for enhanced branch creation and environment management
- Added a new script in `package.json` for setting up Neon on Vercel, improving deployment processes.
- Modified `doCreate` function in `neon-branch.ts` to include username and timestamp in branch names, reducing collision risks.
- Updated error messages to reflect the new script for environment variable management, enhancing user guidance.

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "env:pull:preview": "bun scripts/vercel-env-pull.ts preview",
     "env:pull:prod": "bun scripts/vercel-env-pull.ts production",
     "secrets:neon": "bun scripts/neon-setup-local.ts",
+    "secrets:neon:vercel": "bun scripts/setup-neon-vercel.ts",
     "vc:env:add": "bun scripts/vc-env-add.ts",
     "db:branch:new": "bun scripts/neon-branch.ts create",
     "db:branch:delete": "bun scripts/neon-branch.ts delete"
