Refactor biome.json and package.json for improved script organization and environment management
- Simplified the `includes` section in `biome.json` to only include all files, enhancing clarity.
- Updated `package.json` to streamline script paths, replacing direct script calls with references to the new `cli-utils` package for better organization.
- Removed obsolete scripts related to Neon setup and environment management, consolidating functionality into the `cli-utils` package for improved maintainability.

--- a/biome.json
+++ b/biome.json
@@ -2,22 +2,7 @@
   "$schema": "https://biomejs.dev/schemas/2.1.2/schema.json",
   "files": {
     "ignoreUnknown": false,
-    "includes": [
-      "**",
-      "!**/.next",
-      "!**/dist",
-      "!**/.turbo",
-      "!**/dev-dist",
-      "!**/.zed",
-      "!**/.vscode",
-      "!**/routeTree.gen.ts",
-      "!**/src-tauri",
-      "!**/.nuxt",
-      "!bts.jsonc",
-      "!**/.expo",
-      "!**/.wrangler",
-      "!**/.source"
-    ]
+    "includes": ["**"]
   },
   "extends": ["ultracite"],
   "linter": {
@@ -30,7 +15,8 @@
   "overrides": [
     {
       "includes": [
-        "packages/**/runtime/**/*.{ts,tsx}",
+        "packages/**/runtime/**/*.ts",
+        "packages/**/runtime/**/*.tsx",
         "packages/**/inngest/**/*.ts",
         "packages/facts/**/*.ts",
         "packages/rules/**/*.ts"
@@ -50,7 +36,7 @@
       }
     },
     {
-      "includes": ["scripts/**/*.ts"],
+      "includes": ["packages/cli-utils/src/**/*.ts"],
       "linter": {
         "rules": {
           "suspicious": {
