--- a/package.json
+++ b/package.json
@@ -21,16 +21,12 @@
     "db:generate": "turbo db:generate --filter=database",
     "db:migrate": "turbo db:migrate --filter=database",
     "dev:inngest:events": "npx inngest-cli@latest dev -u http://localhost:3001/api/inngest",
-    "onboard": "bun scripts/onboard.ts",
-    "vc:set-scope": "bun scripts/vercel-set-scope.ts",
-    "env:pull:dev": "bun scripts/vercel-env-pull.ts development",
-    "env:pull:preview": "bun scripts/vercel-env-pull.ts preview",
-    "env:pull:prod": "bun scripts/vercel-env-pull.ts production",
-    "secrets:neon": "bun scripts/neon-setup-local.ts",
-    "secrets:neon:vercel": "bun scripts/setup-neon-vercel.ts",
-    "vc:env:add": "bun scripts/vc-env-add.ts",
-    "db:branch:new": "bun scripts/neon-branch.ts create",
-    "db:branch:delete": "bun scripts/neon-branch.ts delete"
+    "neon": "bun packages/cli-utils/src/cli/neon.ts",
+    "vercel": "bun packages/cli-utils/src/cli/vercel.ts",
+    "onboard": "bun packages/cli-utils/src/cli/onboard.ts",
+    "env:pull": "bun packages/cli-utils/src/cli/vercel.ts pull",
+    "db:branch:new": "bun packages/cli-utils/src/cli/neon.ts create",
+    "db:branch:delete": "bun packages/cli-utils/src/cli/neon.ts delete"
   },
   "dependencies": {
     "@effect/schema": "^0.75.5",
