--- a/.oxlintrc.json
+++ b/.oxlintrc.json
@@ -1,9 +1,5 @@
 {
-  "plugins": [
-    "unicorn",
-    "typescript",
-    "oxc"
-  ],
+  "plugins": ["unicorn", "typescript", "oxc"],
   "categories": {},
   "rules": {
     "for-direction": "warn",
@@ -121,5 +117,5 @@
     "builtin": true
   },
   "globals": {},
-  "ignorePatterns": []
+  "ignorePatterns": ["packages/cli-utils/old-scripts/**"]
 }
