--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -3,7 +3,8 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "true"
+    "build": "true",
+    "dev": "vercel dev -p 3001"
   },
   "dependencies": {
     "better-auth": "^1.3.8",
