--- a/.github/workflows/db-migrate.yml
+++ b/.github/workflows/db-migrate.yml
@@ -6,6 +6,7 @@ on:
 
 jobs:
   migrate:
+    environment: ${{ startsWith(github.ref, 'refs/heads/main') && 'Production' || 'Preview' }}
     runs-on: ubuntu-latest
     timeout-minutes: 15
     permissions:
