--- a/apps/frontrow/package.json
+++ b/apps/frontrow/package.json
@@ -32,6 +32,9 @@
     "better-auth": "^1.3.8"
   },
   "devDependencies": {
+    "@tanstack/devtools-vite": "^0.3.3",
+    "@tanstack/react-devtools": "^0.7.0",
+    "@tanstack/react-query-devtools": "^5.80.5",
     "@tanstack/react-router-devtools": "^1.121.0-alpha.27",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.2.0",
@@ -41,7 +44,6 @@
     "jsdom": "^26.0.0",
     "typescript": "^5.7.2",
     "vite": "^7.0.2",
-    "web-vitals": "^5.0.3",
-    "@tanstack/react-query-devtools": "^5.80.5"
+    "web-vitals": "^5.0.3"
   }
 }
