--- a/apps/honoken/package.json
+++ b/apps/honoken/package.json
@@ -12,7 +12,7 @@
     "test:unit": "vitest run tests/unit",
     "setup": "node ./scripts/setup.mjs",
     "check-bundle-size": "node ./scripts/check-bundle-size.js",
-    "dev": "bun run src/index.ts",
+    "dev": "bun --env-file=.env.local run src/index.ts",
     "dev:vercel": "vercel dev -p 3002",
     "build": "tsc",
     "deploy:preview": "vercel",
@@ -32,7 +32,8 @@
     "passkit-generator": "^3.4.0",
     "posthog-node": "^5.8.2",
     "undici": "^7.10.0",
-    "zod": "^4.0.0"
+    "zod": "^4.0.0",
+    "inngest": "^3.40.1"
   },
   "devDependencies": {
     "@iarna/toml": "^2.2.5",
