--- a/apps/frontrow/.env.example
+++ b/apps/frontrow/.env.example
@@ -7,3 +7,7 @@ VITE_AUTH_BASE_URL=
 
 # Dev/Preview only: upstream auth URL (must include /auth)
 AUTH_PROXY_BASE=
+
+HONOKEN_BASE_URL=
+HONOKEN_ADMIN_USER=
+HONOKEN_ADMIN_PASS=
