vercel env vars, partial vercel blob fix

--- a/apps/honoken/.env.example
+++ b/apps/honoken/.env.example
@@ -2,10 +2,6 @@
 DATABASE_URL=postgresql://...
 DEV_DATABASE_URL=postgresql://...
 
-# Storage (Upstash Redis)
-UPSTASH_REDIS_REST_URL=https://...upstash.io
-UPSTASH_REDIS_REST_TOKEN=AX...
-
 # Security (Required)
 # Encryption keys - versioned for rotation support
 HONOKEN_ENCRYPTION_KEY_V1=base64_encoded_32_byte_key  # Generate with: openssl rand -base64 32
@@ -34,5 +30,5 @@ POSTHOG_PROJECT_API_KEY=phc_your_project_key_here
 # LOG_SAMPLE_SUCCESS_RATE=0.01
 # GIT_SHA=auto_detected
 
-# Deprecated - Remove after migration
-# HONOKEN_SENTRY_DSN=deprecated
+# Vercel Blob Storage
+HONOKEN_IMAGES_READ_WRITE_TOKEN=vercel_token
