--- a/biome.json
+++ b/biome.json
@@ -8,7 +8,8 @@
   "linter": {
     "rules": {
       "performance": {
-        "noNamespaceImport": "off"
+        "noNamespaceImport": "off",
+        "noImgElement": "off"
       }
     }
   },
