--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "type": "module",
   "main": "./index.ts",
+  "dependencies": {
+    "ws": "^8.18.0"
+  },
   "exports": {
     ".": "./index.ts",
     "./schema": "./schema/index.ts",
