# This is a combination of 59 commits. # This is the 1st commit message:
Update dev script in honoken package.json to use 'bun run' instead of specifying the env file directly

# This is the commit message #2:

update deps and got frontrow to build cleanly

- Updated various dependencies in frontrow's package.json to their latest versions for better performance and security.
- Refactored routeTree to integrate the new router setup, improving type safety and modularity.
- Cleaned up CSS imports in the root route component for better organization.

# This is the commit message #3:

Update biome.json to exclude context files from linting includes

# This is the commit message #4:

Create test pass -> create pass

# This is the commit message #5:

nitro v2 patch

# This is the commit message #6:

tanstack start working with v1 rc

# This is the commit message #7:

frontrow now builds for Vercel deployment

# This is the commit message #8:

Add inngest-kit dependency and update auth module

- Added 'inngest-kit' as a dependency in both bun.lock and apps/auth/package.json.
- Refactored auth.ts to import 'inngest' from 'inngest-kit' and included 'reactStartCookies' in the plugins for better cookie management.

# This is the commit message #9:

Update dependencies in auth module and bun.lock

- Updated dependencies in apps/auth/package.json to their latest versions for better performance and security.
- Adjusted bun.lock to reflect the changes in dependency versions.

# This is the commit message #10:

Update dependencies in inngest package and bun.lock

- Upgraded 'inngest' and '@effect/platform-node' to their latest versions for improved functionality.
- Updated 'effect' dependency version for better compatibility.
- Adjusted bun.lock to reflect the changes in dependency versions.

# This is the commit message #11:

Update dependencies and configuration for frontrow and auth modules

- Added '@types/node' to devDependencies in both bun.lock and apps/frontrow/package.json 

--- a/apps/honoken/package.json
+++ b/apps/honoken/package.json
@@ -12,11 +12,17 @@
     "test:unit": "vitest run tests/unit",
     "setup": "node ./scripts/setup.mjs",
     "check-bundle-size": "node ./scripts/check-bundle-size.js",
-    "dev": "bun --env-file=.env.local run src/index.ts",
+    "dev": "bun run src/index.ts",
     "dev:vercel": "vercel dev -p 3002",
     "build": "tsc",
     "deploy:preview": "vercel",
     "deploy:prod": "vercel --prod"
+  },
+  "exports": {
+    "./db": "./src/db/index.ts",
+    "./passkit/apnsFetch": "./src/passkit/apnsFetch.ts",
+    "./repo/wallet": "./src/repo/wallet.ts",
+    "./types": "./src/types.ts"
   },
   "dependencies": {
     "@vercel/blob": "^1.1.1",
