--- a/packages/database/tsconfig.json
+++ b/packages/database/tsconfig.json
@@ -7,7 +7,9 @@
     "moduleResolution": "bundler",
     "verbatimModuleSyntax": true,
     "declaration": true,
-    "emitDeclarationOnly": true,
+    "emitDeclarationOnly": false,
+    "outDir": "./dist",
+    "rootDir": ".",
     "composite": true,
     "noEmit": false,
     "skipLibCheck": true,
