--- a/packages/inngest/tsconfig.json
+++ b/packages/inngest/tsconfig.json
@@ -1,1 +1,17 @@
-
+{
+  "extends": "../../tsconfig.base.json",
+  "compilerOptions": {
+    "outDir": "dist",
+    "module": "ESNext",
+    "moduleResolution": "bundler",
+    "allowImportingTsExtensions": true,
+    "verbatimModuleSyntax": true,
+    "noEmit": false,
+    "baseUrl": ".",
+    "paths": {
+      "@honoken/*": ["../../apps/honoken/src/*"]
+    }
+  },
+  "include": ["**/*.ts"],
+  "exclude": ["node_modules"]
+}
