--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -3,17 +3,28 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "true",
-    "dev": "vercel dev -p 3001"
+    "build": "turbo build --filter=database --filter=inngest-kit && mkdir -p .output && touch .output/.keep",
+    "dev": "bun src/dev.ts"
+  },
+  "engines": {
+    "node": "22.x"
   },
   "dependencies": {
-    "better-auth": "^1.3.8",
-    "@better-auth/expo": "^1.3.8",
-    "hono": "^4.8.2",
-    "database": "workspace:*"
+    "better-auth": "^1.3.18",
+    "@better-auth/expo": "^1.3.18",
+    "hono": "^4.9.9",
+    "database": "workspace:*",
+    "inngest-kit": "workspace:*"
   },
   "devDependencies": {
-    "@hono/node-server": "^1.14.4",
-    "typescript": "^5.7.2"
+    "@hono/node-server": "^1.19.4",
+    "typescript": "^5.9.2"
+  },
+  "turbo": {
+    "tasks": {
+      "build": {
+        "outputs": []
+      }
+    }
   }
 }
