--- a/apps/auth/tsconfig.json
+++ b/apps/auth/tsconfig.json
@@ -1,1 +1,15 @@
-
+{
+  "extends": "../../tsconfig.base.json",
+  "compilerOptions": {
+    "module": "ESNext",
+    "target": "ES2022",
+    "moduleResolution": "nodenext",
+    "verbatimModuleSyntax": true,
+    "noEmit": true,
+    "strict": true,
+    "skipLibCheck": true,
+    "types": ["node"]
+  },
+  "include": ["src/**/*.ts", "api/**/*.ts", "cli-auth.config.ts"],
+  "exclude": ["node_modules"]
+}
