--- a/apps/crew/package.json
+++ b/apps/crew/package.json
@@ -7,7 +7,7 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "prebuild": "expo prebuild",
-    "web": "expo start --web"
+    "web": "expo start --web --port 3005"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
