--- a/apps/events/tsconfig.json
+++ b/apps/events/tsconfig.json
@@ -1,13 +1,16 @@
 {
+  "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "target": "ESNext",
+    "outDir": "dist",
     "module": "ESNext",
     "moduleResolution": "bundler",
-    "verbatimModuleSyntax": true,
-    "strict": true,
-    "skipLibCheck": true,
-    "outDir": "./dist",
-    "types": ["node"]
+    "allowImportingTsExtensions": false,
+    "noEmit": false,
+    "paths": {
+      "database/*": ["../../packages/database/*"],
+      "@honoken/*": ["../honoken/src/*"]
+    }
   },
-  "include": ["src"]
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules"]
 }
