--- a/package.json
+++ b/package.json
@@ -45,7 +45,12 @@
     "ultracite": "5.1.1",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.5",
-    "oxlint": "^1.13.0"
+    "oxlint": "^1.13.0",
+    "@types/node": "^20.12.12"
+  },
+  "resolutions": {
+    "effect": "^3.17.9",
+    "@effect/schema": "^0.75.5"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,json,jsonc,css,scss,md,mdx}": [
