--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -3,21 +3,46 @@
   "version": "0.0.0",
   "private": true,
   "type": "module",
-  "main": "./index.ts",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "dependencies": {
     "ws": "^8.18.0"
   },
   "exports": {
-    ".": "./index.ts",
-    "./schema": "./schema/index.ts",
-    "./db": "./db/index.ts",
-    "./zod": "./runtime/zod.ts",
-    "./effect": "./runtime/effect.ts"
+    ".": {
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.js"
+    },
+    "./schema": {
+      "types": "./dist/schema/index.d.ts",
+      "default": "./dist/schema/index.js"
+    },
+    "./db": {
+      "types": "./dist/db/index.d.ts",
+      "default": "./dist/db/index.js"
+    },
+    "./zod": {
+      "types": "./dist/runtime/zod.d.ts",
+      "default": "./dist/runtime/zod.js"
+    },
+    "./effect": {
+      "types": "./dist/runtime/effect.d.ts",
+      "default": "./dist/runtime/effect.js"
+    }
   },
   "scripts": {
+    "build": "tsdown -c tsdown.config.ts",
+    "dev": "tsdown -c tsdown.config.ts -w",
+    "typecheck": "tsc -p tsconfig.json --noEmit",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio"
+  },
+  "devDependencies": {
+    "@types/node": "^24.5.2",
+    "@types/ws": "^8.5.10",
+    "tsdown": "^0.15.5",
+    "typescript": "^5.9.2"
   }
 }
