--- a/apps/frontrow/package.json
+++ b/apps/frontrow/package.json
@@ -2,43 +2,46 @@
   "name": "frontrow",
   "private": true,
   "type": "module",
+  "engines": {
+    "node": ">=22.12.0"
+  },
   "scripts": {
     "build": "vite build",
     "serve": "vite preview",
     "dev": "vite dev --port=3004"
   },
   "dependencies": {
-    "database": "workspace:*",
-    "radix-ui": "^1.4.3",
-    "@tanstack/react-form": "^1.23.2",
     "@tailwindcss/vite": "^4.1.13",
+    "@tanstack/nitro-v2-vite-plugin": "^1.132.0",
+    "@tanstack/react-form": "^1.23.4",
     "@tanstack/react-query": "^5.90.2",
-    "@tanstack/react-router": "^1.132.6",
+    "@tanstack/react-router": "^1.132.7",
     "@tanstack/react-router-with-query": "^1.130.17",
-    "@tanstack/react-start": "^1.132.6",
-    "@tanstack/router-plugin": "^1.132.6",
+    "@tanstack/react-start": "^1.132.10",
+    "@tanstack/router-plugin": "^1.132.7",
+    "better-auth": "^1.3.18",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "database": "workspace:*",
     "lucide-react": "^0.544.0",
     "next-themes": "^0.4.6",
+    "nitro": "npm:nitro-nightly",
+    "radix-ui": "^1.4.3",
     "react": "19.1.1",
     "react-dom": "19.1.1",
     "sonner": "^2.0.7",
-    "tailwindcss": "^4.1.13",
     "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.13",
     "tw-animate-css": "^1.4.0",
     "vite-tsconfig-paths": "^5.1.4",
-    "zod": "^4.1.11",
-    "better-auth": "^1.3.17"
+    "zod": "^4.1.11"
   },
   "devDependencies": {
-    "@tanstack/devtools-vite": "^0.3.3",
-    "@tanstack/react-devtools": "^0.7.0",
     "@tanstack/react-query-devtools": "^5.90.2",
-    "@tanstack/react-router-devtools": "^1.132.6",
+    "@tanstack/react-router-devtools": "^1.132.7",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/react": "^16.3.0",
-    "@types/react": "^19.1.13",
+    "@types/react": "^19.1.14",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.3",
     "jsdom": "^27.0.0",
