--- a/apps/frontrow/package.json
+++ b/apps/frontrow/package.json
@@ -12,12 +12,13 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
+    "@tanstack/devtools-vite": "^0.3.3",
     "@tanstack/nitro-v2-vite-plugin": "^1.132.0",
     "@tanstack/react-form": "^1.23.4",
     "@tanstack/react-query": "^5.90.2",
     "@tanstack/react-router": "^1.132.7",
     "@tanstack/react-router-with-query": "^1.130.17",
-    "@tanstack/react-start": "^1.132.10",
+    "@tanstack/react-start": "^1.132.12",
     "@tanstack/router-plugin": "^1.132.7",
     "better-auth": "^1.3.18",
     "class-variance-authority": "^0.7.1",
@@ -25,7 +26,6 @@
     "database": "workspace:*",
     "lucide-react": "^0.544.0",
     "next-themes": "^0.4.6",
-    "nitro": "npm:nitro-nightly",
     "radix-ui": "^1.4.3",
     "react": "19.1.1",
     "react-dom": "19.1.1",
@@ -37,8 +37,9 @@
     "zod": "^4.1.11"
   },
   "devDependencies": {
+    "@tanstack/react-devtools": "^0.7.0",
     "@tanstack/react-query-devtools": "^5.90.2",
-    "@tanstack/react-router-devtools": "^1.132.7",
+    "@tanstack/react-router-devtools": "^1.132.11",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/react": "^16.3.0",
     "@types/react": "^19.1.14",
