--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -10,7 +10,8 @@
     "better-auth": "^1.3.8",
     "@better-auth/expo": "^1.3.8",
     "hono": "^4.8.2",
-    "database": "workspace:*"
+    "database": "workspace:*",
+    "inngest-kit": "workspace:*"
   },
   "devDependencies": {
     "@hono/node-server": "^1.14.4",
