Update dependencies and configuration for frontrow and auth modules
- Added '@types/node' to devDependencies in both bun.lock and apps/frontrow/package.json for improved type definitions.
- Updated 'types' in frontrow's tsconfig.json to include 'node' for better type support.
- Modified ignoreCommand in vercel.json for both frontrow and auth to ensure proper deployment checks.
- Adjusted bun.lock to reflect the changes in dependency versions.

--- a/turbo.json
+++ b/turbo.json
@@ -1,38 +1,51 @@
 {
-	"$schema": "https://turbo.build/schema.json",
-	"ui": "tui",
-	"tasks": {
-		"build": {
-			"dependsOn": ["^build"],
-			"inputs": ["$TURBO_DEFAULT$", ".env*"],
-			"outputs": ["dist/**"]
-		},
-		"lint": {
-			"dependsOn": ["^lint"]
-		},
-		"check-types": {
-			"dependsOn": ["^check-types"]
-		},
-		"dev": {
-			"cache": false,
-			"persistent": true
-		},
-		"db:push": {
-			"cache": false,
-			"persistent": true
-		},
-		"db:studio": {
-			"cache": false,
-			"persistent": true
-		},
-		"db:migrate": {
-			"cache": false,
-			"persistent": true
-		},
-		"db:generate": {
-			"cache": false,
-			"persistent": true
-		}
-		
-			}
+  "$schema": "https://turbo.build/schema.json",
+  "ui": "tui",
+  "tasks": {
+    "build": {
+      "dotEnv": [
+        ".env.production.local",
+        ".env.local",
+        ".env.production",
+        ".env"
+      ],
+      "dependsOn": ["^build"],
+      "outputs": ["dist/**", ".output/**"],
+      "env": [
+        "DATABASE_URL",
+        "DASH0_AUTH_TOKEN",
+        "OTEL_EXPORTER_OTLP_HEADERS",
+        "OTEL_EXPORTER_OTLP_ENDPOINT",
+        "DASH0_LOG_DRAIN_ENDPOINT",
+        "DASH0_DATASET",
+        "OTEL_EXPORTER_OTLP_COMPRESSION"
+      ]
+    },
+    "lint": {
+      "dependsOn": ["^lint"]
+    },
+    "check-types": {
+      "dependsOn": ["^check-types"]
+    },
+    "dev": {
+      "cache": false,
+      "persistent": true
+    },
+    "db:push": {
+      "cache": false,
+      "persistent": true
+    },
+    "db:studio": {
+      "cache": false,
+      "persistent": true
+    },
+    "db:migrate": {
+      "cache": false,
+      "persistent": true
+    },
+    "db:generate": {
+      "cache": false,
+      "persistent": true
+    }
+  }
 }
