--- a/apps/auth/vercel.json
+++ b/apps/auth/vercel.json
@@ -6,5 +6,5 @@
       "maxDuration": 300
     }
   },
-  "ignoreCommand": "if [ -z \"$VERCEL_GIT_PREVIOUS_SHA\" ]; then exit 1; fi; git diff --quiet \"$VERCEL_GIT_PREVIOUS_SHA\" \"$VERCEL_GIT_COMMIT_SHA\" -- apps/auth packages/database || exit 1"
+  "ignoreCommand": "if [ -z \"$VERCEL-GIT-PREVIOUS-SHA\" ]; then exit 1; fi; git diff --quiet \"$VERCEL_GIT_PREVIOUS_SHA\" \"$VERCEL_GIT_COMMIT_SHA\" -- apps/auth packages || exit 1"
 }
