--- a/apps/backstage/vercel.json
+++ b/apps/backstage/vercel.json
@@ -5,5 +5,5 @@
     { "src": "/api/(.*)", "dest": "/api/$1" },
     { "src": "/.*", "dest": "/_shell.html" }
   ],
-  "ignoreCommand": "if [ -z \"$VERCEL_GIT_PREVIOUS_SHA\" ]; then exit 1; fi; git diff --quiet \"$VERCEL_GIT_PREVIOUS_SHA\" \"$VERCEL_GIT_COMMIT_SHA\" -- apps/backstage packages || exit 1"
+  "ignoreCommand": "if [ -z \"$VERCEL_GIT_PREVIOUS_SHA\" ]; then exit 1; fi; git diff --quiet \"$VERCEL_GIT_PREVIOUS_SHA\" \"$VERCEL_GIT_COMMIT_SHA\" -- apps/backstage || exit 1"
 }
