--- a/apps/frontrow/vercel.json
+++ b/apps/frontrow/vercel.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
-  "ignoreCommand": "if [ -z \"$VERCEL_GIT_PREVIOUS_SHA\" ]; then exit 1; fi; git diff --quiet \"$VERCEL_GIT_PREVIOUS_SHA\" \"$VERCEL_GIT_COMMIT_SHA\" -- apps/frontrow packages apps/auth || exit 1",
+  "ignoreCommand": "if [ -z \"$VERCEL_GIT_PREVIOUS_SHA\" ]; then exit 1; fi; git diff --quiet \"$VERCEL_GIT_PREVIOUS_SHA\" \"$VERCEL_GIT_COMMIT_SHA\" -- apps/frontrow || exit 1",
   "rewrites": [
     {
       "source": "/((?!.*\\.(?:css|js|mjs|png|jpg|jpeg|gif|svg|ico|woff|woff2|ttf|map|txt|webp|avif|json)$).*)",
