--- a/apps/auth/vercel.json
+++ b/apps/auth/vercel.json
@@ -3,8 +3,9 @@
   "regions": ["iad1"],
   "functions": {
     "api/index.ts": {
-      "maxDuration": 300
+      "maxDuration": 300,
+      "runtime": "nodejs20.x"
     }
   },
-  "ignoreCommand": "if [ -z \"$VERCEL-GIT-PREVIOUS-SHA\" ]; then exit 1; fi; git diff --quiet \"$VERCEL_GIT_PREVIOUS_SHA\" \"$VERCEL_GIT_COMMIT_SHA\" -- apps/auth || exit 1"
+  "ignoreCommand": "if [ -z \"$VERCEL-GIT-PREVIOUS-SHA\" ]; then exit 1; fi; git diff --quiet \"$VERCEL_GIT_PREVIOUS_SHA\" \"$VERCEL_GIT_COMMIT_SHA\" -- apps/auth packages || exit 1"
 }
