--- a/apps/auth/vercel.json
+++ b/apps/auth/vercel.json
@@ -7,5 +7,5 @@
       "runtime": "nodejs20.x"
     }
   },
-  "ignoreCommand": "if [ -z \"$VERCEL-GIT-PREVIOUS-SHA\" ]; then exit 1; fi; git diff --quiet \"$VERCEL_GIT_PREVIOUS_SHA\" \"$VERCEL_GIT_COMMIT_SHA\" -- apps/auth packages || exit 1"
+  "ignoreCommand": "if [ -z \"$VERCEL_GIT_PREVIOUS_SHA\" ]; then exit 1; fi; git diff --quiet \"$VERCEL_GIT_PREVIOUS_SHA\" \"$VERCEL_GIT_COMMIT_SHA\" -- apps/auth packages || exit 1"
 }
