Update dependencies and TypeScript configurations across multiple packages
- Updated dependencies in the inngest package, replacing '@effect/platform-node' and '@effect/schema' with 'hono' and 'honoken'.
- Added resolutions for 'effect' and '@effect/schema' in package.json for consistent dependency management.
- Enhanced TypeScript configurations in tsconfig files for better compatibility and stricter type checking.
- Introduced new exports in the honoken package for improved module accessibility.
- Refactored event handling in the inngest package to utilize the new schema structure.

--- a/apps/honoken/package.json
+++ b/apps/honoken/package.json
@@ -18,6 +18,12 @@
     "deploy:preview": "vercel",
     "deploy:prod": "vercel --prod"
   },
+  "exports": {
+    "./db": "./src/db/index.ts",
+    "./passkit/apnsFetch": "./src/passkit/apnsFetch.ts",
+    "./repo/wallet": "./src/repo/wallet.ts",
+    "./types": "./src/types.ts"
+  },
   "dependencies": {
     "@vercel/blob": "^1.1.1",
     "@hono/zod-validator": "^0.7.2",
