--- a/apps/honoken/tsconfig.json
+++ b/apps/honoken/tsconfig.json
@@ -1,12 +1,15 @@
 {
+  "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "target": "ESNext",
+    "outDir": "dist",
     "module": "ESNext",
-    "moduleResolution": "Bundler",
+    "target": "ES2022",
+    "moduleResolution": "bundler",
+    "allowImportingTsExtensions": true,
+    "verbatimModuleSyntax": true,
+    "noEmit": true,
     "strict": true,
     "skipLibCheck": true,
-    "noEmit": true,
-    "lib": ["ESNext"],
     "jsx": "react-jsx",
     "jsxImportSource": "hono/jsx",
     "types": ["node", "vitest/globals"],
@@ -15,5 +18,6 @@
       "@honoken/*": ["./src/*"]
     }
   },
+  "include": ["src/**/*.ts"],
   "exclude": ["node_modules", "dist", "archived", "docs"]
 }
