--- a/apps/honoken/tsconfig.json
+++ b/apps/honoken/tsconfig.json
@@ -19,5 +19,5 @@
     }
   },
   "include": ["src/**/*.ts"],
-  "exclude": ["node_modules", "dist", "archived", "docs"]
+  "exclude": ["node_modules", "src/**/*.test.ts", "src/**/*.smoke.ts"]
 }
