--- a/apps/auth/vercel.json
+++ b/apps/auth/vercel.json
@@ -4,7 +4,7 @@
   "functions": {
     "api/index.ts": {
       "maxDuration": 300,
-      "runtime": "nodejs22.x"
+      "runtime": "nodejs"
     }
   },
   "ignoreCommand": "if [ -z \"$VERCEL_GIT_PREVIOUS_SHA\" ]; then exit 1; fi; git diff --quiet \"$VERCEL_GIT_PREVIOUS_SHA\" \"$VERCEL_GIT_COMMIT_SHA\" -- apps/auth packages || exit 1"
