Update Node.js engine version in auth module and refine TypeScript configuration in events module
- Added Node.js engine specification to package.json for the auth module.
- Set 'noEmit' to false in tsconfig.json for the events module to control output behavior.
- Removed unused 'runtime' property from index.ts in events module to clean up the codebase.

--- a/apps/events/tsconfig.json
+++ b/apps/events/tsconfig.json
@@ -4,6 +4,7 @@
     "outDir": "dist",
     "module": "ESNext",
     "moduleResolution": "bundler",
+    "noEmit": false,
     "paths": {
       "database/*": ["../../packages/database/*"],
       "@honoken/*": ["../honoken/src/*"]
