--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -6,6 +6,9 @@
     "build": "true",
     "dev": "vercel dev -p 3001"
   },
+  "engines": {
+    "node": "22.x"
+  },
   "dependencies": {
     "better-auth": "^1.3.18",
     "@better-auth/expo": "^1.3.18",
