Update Vercel configuration in auth module and enhance TypeScript settings in events module
- Changed function path in vercel.json to support all TypeScript files under the api directory.
- Updated Node.js runtime version to 'nodejs22.x' for better compatibility.
- Added 'allowImportingTsExtensions' option in tsconfig.json for the events module to control TypeScript behavior.

--- a/apps/events/tsconfig.json
+++ b/apps/events/tsconfig.json
@@ -4,6 +4,7 @@
     "outDir": "dist",
     "module": "ESNext",
     "moduleResolution": "bundler",
+    "allowImportingTsExtensions": false,
     "noEmit": false,
     "paths": {
       "database/*": ["../../packages/database/*"],
