Add Turbo configuration to auth module's package.json for build task management

--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -19,5 +19,12 @@
   "devDependencies": {
     "@hono/node-server": "^1.19.4",
     "typescript": "^5.9.2"
+  },
+  "turbo": {
+    "tasks": {
+      "build": {
+        "outputs": []
+      }
+    }
   }
 }
