--- a/apps/honoken/tsconfig.json
+++ b/apps/honoken/tsconfig.json
@@ -7,7 +7,8 @@
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "verbatimModuleSyntax": true,
-    "noEmit": true,
+    "declaration": true,
+    "emitDeclarationOnly": true,
     "strict": true,
     "skipLibCheck": true,
     "jsx": "react-jsx",
