Update auth module's package.json build script and refine Inngest module imports
- Changed the build script in auth module's package.json to create an output directory.
- Removed unused export from Inngest module's index.ts.
- Added database as a dependency in Inngest module's package.json.
- Enhanced TypeScript configuration in Inngest module's tsconfig.json with baseUrl and paths.
- Updated import statements in wallet-pass-update.ts to use direct paths instead of aliases.

--- a/packages/inngest/package.json
+++ b/packages/inngest/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "inngest": "^3.43.1",
     "hono": "^4.9.9",
-    "honoken": "workspace:*"
+    "honoken": "workspace:*",
+    "database": "workspace:*"
   },
   "devDependencies": {
     "inngest": "^3.43.1"
