--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "true",
+    "build": "mkdir -p .output && touch .output/.keep",
     "dev": "vercel dev -p 3001"
   },
   "engines": {
