Local Auth works!!!
- Added Hono as a dependency in bun.lock and updated its version.
- Modified the build script in auth module's package.json to use Bun for development.
- Extended TypeScript configuration in auth module's tsconfig.json for improved module handling and strict type checking.
- Updated app.ts to include logging middleware and adjusted route handling for the auth base path.
- Refined auth.ts to clean up the base URL handling for better compatibility.
- Adjusted API proxy handling in frontrow module to support both environment variables and Vite configuration.

--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "build": "mkdir -p .output && touch .output/.keep",
-    "dev": "vercel dev -p 3001"
+    "dev": "bun src/dev.ts"
   },
   "engines": {
     "node": "22.x"
