Refactor CORS and update environment variables
- Simplified CORS configuration in app.ts to handle origins more effectively, returning 'null' for disallowed origins and limiting allowed methods to GET, POST, and OPTIONS.
- Updated turbo.json to retain only the AUTH_PROXY_BASE environment variable, removing others for cleaner configuration.

--- a/turbo.json
+++ b/turbo.json
@@ -15,11 +15,7 @@
         "OTEL_EXPORTER_OTLP_COMPRESSION",
         "BETTER_AUTH_URL",
         "VITE_AUTH_BASE_URL",
-        "AUTH_PROXY_BASE",
-        "BETTER_AUTH_SECRET",
-        "AUTH_COOKIE_DOMAIN",
-        "ALLOWED_ORIGINS",
-        "INNGEST_EVENT_KEY"
+        "AUTH_PROXY_BASE"
       ]
     },
     "lint": {
