--- a/apps/auth/tsconfig.json
+++ b/apps/auth/tsconfig.json
@@ -3,8 +3,7 @@
   "compilerOptions": {
     "module": "ESNext",
     "target": "ES2022",
-    "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
+    "moduleResolution": "node",
     "verbatimModuleSyntax": true,
     "noEmit": true,
     "strict": true,
