--- a/apps/auth/tsconfig.json
+++ b/apps/auth/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "module": "ESNext",
     "target": "ES2022",
-    "moduleResolution": "node",
+    "moduleResolution": "nodenext",
     "verbatimModuleSyntax": true,
     "noEmit": true,
     "strict": true,
