--- a/packages/inngest/package.json
+++ b/packages/inngest/package.json
@@ -3,14 +3,36 @@
   "version": "0.0.1",
   "private": true,
   "type": "module",
-  "main": "./index.ts",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "exports": {
-    ".": "./index.ts",
-    "./client": "./client.ts",
-    "./functions": "./functions/index.ts",
-    "./adapters/hono": "./adapters/hono.ts",
-    "./events": "./events.ts",
-    "./client.browser": "./client.browser.ts"
+    ".": {
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.js"
+    },
+    "./client": {
+      "types": "./dist/client.d.ts",
+      "default": "./dist/client.js"
+    },
+    "./functions": {
+      "types": "./dist/functions/index.d.ts",
+      "default": "./dist/functions/index.js"
+    },
+    "./adapters/hono": {
+      "types": "./dist/adapters/hono.d.ts",
+      "default": "./dist/adapters/hono.js"
+    },
+    "./events": {
+      "types": "./dist/events.d.ts",
+      "default": "./dist/events.js"
+    },
+    "./client.browser": {
+      "types": "./dist/client.browser.d.ts",
+      "default": "./dist/client.browser.js"
+    }
+  },
+  "scripts": {
+    "build": "tsc -p tsconfig.build.json"
   },
   "dependencies": {
     "inngest": "^3.43.1",
