refactor(auth, database, inngest): Update build scripts and tsconfig for improved module resolution

--- a/packages/inngest/package.json
+++ b/packages/inngest/package.json
@@ -32,7 +32,7 @@
     }
   },
   "scripts": {
-    "build": "tsc -p tsconfig.build.json"
+    "build": "tsc -p tsconfig.json"
   },
   "dependencies": {
     "inngest": "^3.43.1",
