--- a/packages/inngest/tsconfig.json
+++ b/packages/inngest/tsconfig.json
@@ -6,7 +6,7 @@
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "verbatimModuleSyntax": true,
-    "noEmit": true,
+    "noEmit": false,
     "baseUrl": ".",
     "paths": {
       "@honoken/*": ["../../apps/honoken/src/*"]
