refactor(database, inngest): Update build scripts to use tsdown and add WebSocket configuration for Neon

--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -31,10 +31,17 @@
     }
   },
   "scripts": {
-    "build": "tsc -p tsconfig.json",
+    "build": "tsdown -c tsdown.config.ts",
+    "dev": "tsdown -c tsdown.config.ts -w",
+    "typecheck": "tsc -p tsconfig.json --noEmit",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio"
+  },
+  "devDependencies": {
+    "@types/node": "^24.5.2",
+    "tsdown": "^0.15.5",
+    "typescript": "^5.9.2"
   }
 }
