--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -41,6 +41,7 @@
   },
   "devDependencies": {
     "@types/node": "^24.5.2",
+    "@types/ws": "^8.5.10",
     "tsdown": "^0.15.5",
     "typescript": "^5.9.2"
   }
