update package scripts to support migrating in preview easily

--- a/package.json
+++ b/package.json
@@ -11,15 +11,17 @@
     "dev:events": "turbo -F events dev",
     "build": "turbo build --filter=!handbook --filter=!crew",
     "check-types": "turbo check-types",
-    "dev:backstage": "turbo -F backstage dev",
+    "dev:backstage": "turbo dev --filter=backstage",
     "dev:frontrow": "turbo -F frontrow dev",
     "dev:handbook": "turbo -F handbook dev",
     "dev:crew": "turbo -F crew dev",
     "dev:honoken": "turbo -F honoken dev",
     "db:push": "turbo db:push --filter=database",
+    "db:push:preview": "drizzle-kit push --config=packages/database/drizzle.preview.config.ts",
     "db:studio": "turbo db:studio --filter=database",
     "db:generate": "turbo db:generate --filter=database",
     "db:migrate": "turbo db:migrate --filter=database",
+    "db:migrate:preview": "drizzle-kit migrate --config=packages/database/drizzle.preview.config.ts",
     "dev:inngest:events": "npx inngest-cli@latest dev -u http://localhost:3000/api/inngest",
     "neon": "bun packages/cli-utils/src/cli/neon.ts",
     "vercel": "bun packages/cli-utils/src/cli/vercel.ts",
