Fix auth build to avoid honoken dependency
- Remove inngest-kit from auth's build command
- Auth only needs database built (inngest-kit is used at runtime only)
- Prevents honoken build failures from blocking auth deployments

--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "turbo build --filter=database --filter=inngest-kit && mkdir -p .output && touch .output/.keep",
+    "build": "turbo build --filter=database && mkdir -p .output && touch .output/.keep",
     "dev": "bun src/dev.ts"
   },
   "engines": {
