Update start documentation and package configuration

--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -23,7 +23,8 @@
   "turbo": {
     "tasks": {
       "build": {
-        "outputs": []
+        "outputs": [],
+        "dependsOn": []
       }
     }
   }
