--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "turbo build --filter=database && mkdir -p .output && touch .output/.keep",
+    "build": "mkdir -p .output && touch .output/.keep",
     "dev": "bun src/dev.ts"
   },
   "engines": {
