Normalize deps; add honoken; pin better-auth
- Adds honoken to the events app and moves it to devDependencies where only needed (e.g., Inngest), clarifying runtime vs dev scope and reducing production footprint.
- Updates lockfile to upgrade better-auth/@better-auth/core to 1.3.23 and pin numerous frontend versions for reproducible builds.
- Cleans the auth app by ignoring build output (.output) and removing the local Turbo task override.

Improves dependency hygiene and build determinism across the workspace.

--- a/apps/events/package.json
+++ b/apps/events/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "hono": "^4.9.7",
     "@hono/node-server": "^1.14.4",
-    "inngest-kit": "workspace:*"
+    "inngest-kit": "workspace:*",
+    "honoken": "workspace:*"
   },
   "devDependencies": {
     "typescript": "^5.8.3",
