Update auth build dependencies in turbo.json
- Adds dependencies for database and inngest-kit to the auth build command, ensuring necessary components are built together.
- This change improves the build process by clarifying dependencies and preventing potential build issues.

--- a/packages/inngest/turbo.json
+++ b/packages/inngest/turbo.json
@@ -3,8 +3,7 @@
   "extends": ["//"],
   "tasks": {
     "build": {
-      "outputs": [],
-      "dependsOn": ["database#build", "inngest-kit#build"]
+      "dependsOn": ["database#build"]
     }
   }
 }
