--- a/apps/frontrow/package.json
+++ b/apps/frontrow/package.json
@@ -12,6 +12,7 @@
     "@tanstack/devtools-vite": "^0.3.3",
     "@tanstack/nitro-v2-vite-plugin": "^1.132.31",
     "@tanstack/react-form": "^1.23.5",
+    "@tanstack/react-pacer": "^0.16.4",
     "@tanstack/react-query": "^5.90.2",
     "@tanstack/react-router": "^1.132.31",
     "@tanstack/react-router-with-query": "^1.130.17",
@@ -21,6 +22,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "database": "workspace:*",
+    "framer-motion": "^12.23.22",
     "lucide-react": "^0.544.0",
     "next-themes": "^0.4.6",
     "radix-ui": "^1.4.3",
